loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:4: error: '(' expected but identifier found.
    if estSurBiscuit(){
       ^Poucet1:8: error: illegal start of simple expression
  }
  ^