loopdowhile.Poucet1.scala.code
while (!sortieTrouvee()){
  val biscuits:Int = 0;
  for (k<-1 to 5){
    if estSurBiscuit(){
      biscuits = biscuits + 1;
      avance();
    }
  }
  if (biscuits<3){
    droite();
  }
  else {
    gauche();
  }
}